# EntitiyComponentSystemLib

./: CMakeLists.txt  CMakeSettings.json  link_sfml.cmake
examples/: cube_example.cpp
include/ecs/core/: component_array.h  component_layout.h  component_manager.h  ecs.h  entity_manager.h  system.h  system_manager.h  types.h
include/event/: event.h  event_bus.h  event_queue.h  evnt.h
include/input/: input_manager.h
include/logging/: logging.h
include/utils/: clock_chrono.h  timer.h  types.h
src/core/: component_layout.cpp  entity_manager.cpp
src/event/: communicator.cpp
src/utils/: clock_chrono.cpp
tests/: CMakeLists.txt  ecs_tests.cpp  event_tests.cpp  input_manager_tests.cpp
